--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
           <span class="line line3"></span>
         </div>
         <ul class="menu-items">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Category</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Testimonial</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="d-flex align-center">
           <img src="./Logo.png" alt="logo" width="50" />
@@ -43,13 +42,13 @@
   <main>
     <section class="hero d-flex align-center">
       <div>
-        <h2>Welcome To Our Chelsea Fan Club Website</h2>
+        <h2>Welcome To Chelsea Fan Club Website</h2>
         <p>Home of real fans and football enhtusiasts!</p>
-        <a href="" class="call-to-action"><i class="bx bx-cart"></i> Visit our Shop</a>
+        <a href="shop.html" class="call-to-action"><i class="bx bx-cart"></i> Visit our Shop</a>
       </div>
     </section>
 
-    <section class="gallery">
+    <section class="gallery ctr" >
       <h2 class="display-6 mt-3 mb-0">Gallery</h2>
       <div class="header d-flex flex-column align-items-center">
 
@@ -57,19 +56,16 @@
         <!-- Images used to open the lightbox -->
         <div class="row">
           <div class="column">
-            <img src="https://i.pinimg.com/564x/61/d4/f4/61d4f41c27ae2a97044ee24c563426fa.jpg"
-              onclick="openModal();currentSlide(1)" class="hover-shadow">
+            <img src="./images/chelsea1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
           </div>
           <div class="column">
-            <img src="https://i.pinimg.com/564x/8f/ce/43/8fce435c5776a9faa9a4e129e96322e0.jpg"
-              onclick="openModal();currentSlide(2)" class="hover-shadow">
+            <img src="./images/chelsea2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
           </div>
           <div class="column">
-            <img src="./Chelsea 💙.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+            <img src="./images/Chelsea 💙.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
           </div>
           <div class="column">
-            <img src="https://i.pinimg.com/236x/a1/28/40/a1284077ebc20c7a4dc5956858052862.jpg"
-              onclick="openModal();currentSlide(4)" class="hover-shadow">
+            <img src="./images/chelsea3.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
           </div>
         </div>
 
@@ -80,22 +76,22 @@
 
             <div class="mySlides">
               <div class="numbertext">1 / 4</div>
-              <img src="https://i.pinimg.com/564x/61/d4/f4/61d4f41c27ae2a97044ee24c563426fa.jpg" style="width:100%">
+              <img src="./images/chelsea1.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
               <div class="numbertext">2 / 4</div>
-              <img src="https://i.pinimg.com/564x/8f/ce/43/8fce435c5776a9faa9a4e129e96322e0.jpg" style="width:100%">
+              <img src="./images/chelsea2.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
               <div class="numbertext">3 / 4</div>
-              <img src="./Chelsea 💙.jpg" style="width:100%">
+              <img src="./images/Chelsea 💙.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
               <div class="numbertext">4 / 4</div>
-              <img src="https://i.pinimg.com/236x/a1/28/40/a1284077ebc20c7a4dc5956858052862.jpg" style="width:100%">
+              <img src="./images/chelsea3.jpg" style="width:100%">
             </div>
 
             <!-- Next/previous controls -->
@@ -108,27 +104,36 @@
             </div>
 
             <!-- Thumbnail image controls -->
-            <div class="column">
-              <img class="demo" src="img1.jpg" onclick="currentSlide(1)" alt="Nature">
-            </div>
+            <div class="row thumbnail">
+              <div class="column">
+                <img class="demo" src="./images/chelsea1.jpg" onclick="currentSlide(1)" alt="chelsea">
+              </div>
 
-            <div class="column">
-              <img class="demo" src="img2.jpg" onclick="currentSlide(2)" alt="Snow">
-            </div>
+              <div class="column">
+                <img class="demo" src="./images/chelsea2.jpg" onclick="currentSlide(2)" alt="Snow">
+              </div>
 
-            <div class="column">
-              <img class="demo" src="img3.jpg" onclick="currentSlide(3)" alt="Mountains">
-            </div>
+              <div class="column">
+                <img class="demo" src="./images/Chelsea 💙.jpg" onclick="currentSlide(3)" alt="sqaud matchday pic">
+              </div>
 
-            <div class="column">
-              <img class="demo" src="img4.jpg" onclick="currentSlide(4)" alt="Lights">
+              <div class="column">
+                <img class="demo" src="./images/chelsea3.jpg" onclick="currentSlide(4)" alt="Lights">
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <a href="gallery.html">See more</a>
     </section>
   </main>
   <script src="script.js"></script>
+  <footer>
+    &gt;&gt;&copy;Chelsea FC &lt;&lt;
+    <p>send us <a href="mailto:sefaasema2@gmail.com">an email</a></p>
+    <p>Dail <a href="tel:+2349046246201">+2349046246201</a></p>
+
+  </footer>
 </body>
 
 </html>
