--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
         />
         <link rel="stylesheet" href="style.css" />
         <link rel="shortcut icon" href="Logo.png" type="image/x-icon" />
-        <title>Chelse FC Fan Club | Shop</title>
+        <title>Chelse FC Fan Club | Shoop</title>
 </head>
 <body>
     <header>
